2008-06-28  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR fortran/36657
	* io/list_read.c (read_character): Check for '!' along with separators.
	(find_nml_name): Likewise and eat the comment if found.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@137236 138bc75d-0d04-0410-961f-82ee72b054a4